* make the hardly legible or even illegible links visible on hover over fixme items
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@42373 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/CodeReview/codereview.css
+++ b/extensions/CodeReview/codereview.css
@@ -51,6 +51,9 @@ table.mw-codereview-meta td {
 	background: #df0000 !important;
 	color: white;
 }
+.mw-codereview-status-fixme:hover td a {
+	color: #ff0 !important;
+}
 
 .mw-codereview-status-resolved td {
 	background: #c0ffc0 !important;
